--- a/css/estilos.css
+++ b/css/estilos.css
@@ -26,8 +26,10 @@ section{
 }
 
 .principal {
-  background-color: red;
-  width:100%
+  background-color: #82c3a6;
+  width:100%;
+  max-height: 500px;
+  margin-bottom: 5%;
 }
 
 .secundario {
@@ -37,9 +39,13 @@ section{
   flex-flow: row;
 }
 
-.secundario img{
-  width:50%;
+.principal img{
+  max-height:500px;
+  display: block;
+  margin: 0 auto;
 }
 
-
+.secundario img{
+  width:50%;
+  max-height: 500px;
 }
