--- a/css/estilos.css
+++ b/css/estilos.css
@@ -29,11 +29,10 @@ section{
   background-color: #82c3a6;
   width:100%;
   max-height: 500px;
-  margin-bottom: 5%;
 }
 
 .secundario {
-  background-color: blue;
+  background-color: #d5c75f;
   width:100%;
   display:flex;
   flex-flow: row;
@@ -47,5 +46,11 @@ section{
 
 .secundario img{
   width:50%;
-  max-height: 500px;
+  max-height: 40vh;
+  padding: 10px;
+}
+
+#im1 {
+  width:70%;
+  padding:10px;
 }
