--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,56 +1,80 @@
 *{
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-body {
+body{
   background-color: black;
+}
+
+.contenedor {
+  background-color: #02010a;
   color:white;
   font-family: 'Dancing Script';
   font-size: 100%;
+  display: flex;
+  flex-wrap:wrap;
+  flex-direction: row;
+  width:90%;
+  max-width: 1000px;
+  margin:auto;
 }
 
 header{
-  background-color: #5b7989;
+  background-color:#5b7989;
   width:100%;
+  padding:20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-flow: row wrap;
+  border-radius: 10px 10px 0 0;
+}
+header .titulo{
+  font-size: 1.5em;
+  text-shadow:2px 2px #02010a;
 }
 
-#titulo {
-  font-size: 2em;
-  text-shadow: 2px 2px #02010a;
-  padding:10px;
-}
-
-section{
-  width:100%;
-  display:inline-block;
-}
-
-.principal {
-  background-color: #82c3a6;
-  width:100%;
-  max-height: 500px;
-}
-
-.secundario {
-  background-color: #d5c75f;
-  width:100%;
-  display:flex;
-  flex-flow: row;
-}
-
-.principal img{
-  max-height:500px;
-  display: block;
-  margin: 0 auto;
-}
-
-.secundario img{
+header .enlaces {
   width:50%;
-  max-height: 40vh;
-  padding: 10px;
+  background-color: purple;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
-#im1 {
-  width:70%;
-  padding:10px;
+header .enlaces a{
+    color:white;
+    text-decoration: none;
+    text-align: center;
+    padding: 10px;
+    flex-grow: 1;
+}
+
+section .main {
+  background-color:#82c3a6;
+  width:100%;
+}
+
+div .princ{
+  background-color: inherit;
+  width:100%;
+
+
+}
+
+.princ img{
+  height:40vh;
+  padding: 4%;
+}
+
+div .secun{
+  background-color: brown;
+  height:300px;
+}
+
+footer{
+  background-color:yellow;
+  width:100%;
 }
