--- a/css/estilos.css
+++ b/css/estilos.css
@@ -52,16 +52,21 @@ header .enlaces a{
     flex-grow: 1;
 }
 
+header .enlaces a:hover{
+  text-decoration: underline;
+  color: azure;
+}
+}
+
 section .main {
   background-color:#82c3a6;
-  width:100%;
+  padding:2%;
+
 }
 
 div .princ{
-  background-color: inherit;
+  background-color: #82c3a6;
   width:100%;
-
-
 }
 
 .princ img{
@@ -69,12 +74,29 @@ div .princ{
   padding: 4%;
 }
 
-div .secun{
-  background-color: brown;
-  height:300px;
+section .secun{
+  background-color: #d5c75f;
+  display: flex;
+  flex-flow: row wrap;
+  width:100%;
+}
+
+.s1,.s2{
+  width:50%;
+}
+
+.s1 img{
+  height: 40vh;
+  padding:4%;
+}
+
+.s2 img{
+  height: 40vh;
+  padding:4%;
 }
 
 footer{
-  background-color:yellow;
+  background-color: #C6d5c5;
   width:100%;
+  color:black;
 }
