--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,6 +6,7 @@
 
 body{
   background-color: black;
+  margin-top: 2%;
 }
 
 .contenedor {
@@ -38,18 +39,20 @@ header .titulo{
 
 header .enlaces {
   width:50%;
-  background-color: purple;
+  background-color: #5b7989;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  justify-content: flex-end;
 }
 
 header .enlaces a{
     color:white;
     text-decoration: none;
-    text-align: center;
+    text-align: right;
     padding: 10px;
-    flex-grow: 1;
+    /* flex-grow: 1; */
+
 }
 
 header .enlaces a:hover{
@@ -61,12 +64,15 @@ header .enlaces a:hover{
 section .main {
   background-color:#82c3a6;
   padding:2%;
-
+  width:100%;
+  display: flex;
+  flex-flow: row wrap;
 }
 
 div .princ{
   background-color: #82c3a6;
   width:100%;
+  padding:2%;
 }
 
 .princ img{
@@ -83,6 +89,7 @@ section .secun{
 
 .s1,.s2{
   width:50%;
+  padding: 2%
 }
 
 .s1 img{
