--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,7 +9,7 @@ body{
   margin-top: 2%;
 }
 
-.contenedor {
+.contenido {
   background-color: #02010a;
   color:white;
   font-family: 'Dancing Script';
@@ -18,8 +18,9 @@ body{
   flex-wrap:wrap;
   flex-direction: row;
   width:90%;
-  max-width: 1000px;
+  max-width: 900px;
   margin:auto;
+
 }
 
 header{
@@ -76,30 +77,45 @@ div .princ{
 }
 
 .princ img{
-  height:40vh;
+  width:100%;
+  /* height:40vh; */
   padding: 4%;
+
 }
 
 section .secun{
+  border:solid 1px;
   background-color: #d5c75f;
   display: flex;
   flex-flow: row wrap;
   width:100%;
+  justify-content: center;
+  height:400px;
+  align-items: center;
 }
 
 .s1,.s2{
   width:50%;
-  padding: 2%
+  padding: 2%;
+  display: flex;
+  justify-content: center;
 }
 
 .s1 img{
-  height: 40vh;
+  /* height: 20vh; */
   padding:4%;
+  /* width: 30vh; */
+  height:300px;
+  width:420px;
+  /* width:344.88px; */
 }
 
 .s2 img{
-  height: 40vh;
+  /* height:20vh; */
   padding:4%;
+  /* width:30vh; */
+    height:300px;
+    width:420px;
 }
 
 footer{
@@ -107,3 +123,13 @@ footer{
   width:100%;
   color:black;
 }
+
+
+
+
+
+
+/* ------------Versíon Móvil--------------- */
+@media (max-width:900px){
+
+basta
